--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pdf = "0.7.2"
-lopdf = "0.27.0"
+glob = "0.3.0"
+lopdf = "0.26.0"
+pdf-extract = "0.6.3"
+regex = "1"
